<resources>
    <string name="app_name">小桃微集</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*,./</string>
    <string name="invite_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="skip">跳过</string>
    <string name="input_user_mobile">请输入您的手机号码</string>
    <string name="input_user_password">请输入您的密码</string>
    <string name="input_user_verify_code">请输入您的验证码</string>
    <string name="input_user_new_password">请输入您的新密码</string>
    <string name="input_user_new_password_again">请确认您的新密码</string>
    <string name="input_user_invite_code">请输入邀请码(必填)</string>
    <string name="login_is_representative">登录即代表同意</string>
    <string name="terms_of_use">小桃微集使用条款</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="agree_register">同意协议并注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">第三方登陆</string>
    <string name="net_error">网络不给力～</string>
    <string name="reload">重新加载</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="bind_mobile">绑定手机号码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hint_mobile_error">手机号码格式有误</string>
    <string name="hint_verify_code_error">验证码格式有误</string>
    <string name="hint_password_error">密码格式有误</string>
    <string name="hint_password_twice_error">密码输入不一致</string>
    <string name="hint_invite_code_error">请输入邀请码</string>
    <string name="hint_agreement">请同意使用条款</string>
    <string name="hint_exit">再按一次退出程序</string>
    <string name="main">首页</string>
    <string name="category">分类</string>
    <string name="spell_group">拼团</string>
    <string name="dynamic">桃粉圈</string>
    <string name="mine">我的</string>
    <string name="request_permissions_failure">权限申请失败</string>
    <string name="need_to_go_to_the_settings">权限申请失败,您需要去设置中打开权限</string>
    <string name="login_expiration">登录过期，请重新登录</string>
    <string name="input_search_hint">搜索商品名或粘贴宝贝标题</string>
    <string name="input_goods_name">输入商品名</string>
    <string name="today_selection">今日精选</string>
    <string name="load_more_end">数据加载完毕</string>
    <string name="loading">正在载入～～～</string>
    <string name="empty_data">暂无数据～～～</string>
    <string name="load_more_failed">数据加载失败</string>
    <string name="go">GO</string>
    <string name="look_all">查看全部</string>
    <string name="yuan">¥</string>
    <string name="rmb">¥%1$s</string>
    <string name="discount_price">券后¥%1$s</string>
    <string name="coupons">券</string>
    <string name="money">%1$s元</string>
    <string name="estimate_the_commission">预估佣金: ¥%1$s</string>
    <string name="original_price_format">原价: ¥%1$s</string>
    <string name="sold_count">已售¥%1$s件</string>
    <string name="coupons_value">券面值</string>
    <string name="use_coupons_price">券后价</string>
    <string name="commission">预估佣金</string>
    <string name="current_sold_count">当前销量</string>
    <string name="more_channel">更多频道</string>
    <string name="shape">分享</string>
    <string name="receive_coupon_buy">领券购买¥%1$s</string>
    <string name="collection">收藏</string>
    <string name="coupon_after_the_price">券后价</string>
    <string name="coupon_before_the_price">券前¥%1$s</string>
    <string name="into_shop">进店逛逛</string>
    <string name="colon">：</string>
    <string name="goods_detail">宝贝详情</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="un_install_third_party_app">未安装%1$s</string>
    <string name="hot_search">热门搜索</string>
    <string name="record_search">历史搜索</string>
    <string name="input_search_key">请输入搜索关键词</string>
    <string name="create_share">创建分享</string>
    <string name="rules">规则 ></string>
    <string name="your_commission_expect">您的佣金预计为: ¥%1$s</string>
    <string name="share_image">分享图片</string>
    <string name="online_price">[在售价] %1$s元</string>
    <string name="real_price">[券后价] %1$s元</string>
    <string name="copy_this_info">复制这条信息:</string>
    <string name="goods_password">￥%1$s，打开【手机淘宝】即可查看</string>
    <string name="copy_password">复制淘口令</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzong">QQ空间</string>
    <string name="sina">新浪微博</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="decoding_qr_code">长按识别二维码</string>
    <string name="coupon_before_price_yuan">券前价¥%1$s元</string>
    <string name="message">消息</string>
    <string name="activity_message">活动消息：</string>
    <string name="system_message">系统消息：</string>
    <string name="alliance_message">联盟消息：</string>
    <string name="income_message">收益消息：</string>
    <string name="make_money">赚钱啦，快戳这里。</string>
    <string name="look_more">查看更多</string>
    <string name="copy_comment">复制评论</string>
    <string name="regular_members">普通会员</string>
    <string name="copy">复制</string>
    <string name="fans_count">粉丝 %1$s</string>
    <string name="integral_count">积分 %1$s</string>
    <string name="invite_code">邀请码: %1$s</string>
    <string name="total_income">累计收益</string>
    <string name="detail">明细</string>
    <string name="withdraw">提现</string>
    <string name="can_use_balance">可提余额</string>
    <string name="my_order">我的订单</string>
    <string name="integral_order">积分订单</string>
    <string name="my_fans">我的粉丝</string>
    <string name="invite_friend">邀请好友</string>
    <string name="service_provider">成为服务商</string>
    <string name="new_user_guideline">新手指引</string>
    <string name="my_collection">我的收藏</string>
    <string name="common_problem">常见问题</string>
    <string name="contract_customer">联系客服</string>
    <string name="platform_notice">官方公告</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="change_avatar">点击可修改头像</string>
    <string name="nickname">昵称</string>
    <string name="modify">修改</string>
    <string name="modify_mobile">修改手机号</string>
    <string name="modify_password">修改登陆密码</string>
    <string name="bind_sina">新浪微博绑定</string>
    <string name="bind_wechat">微信绑定</string>
    <string name="bind_alipay">支付宝绑定</string>
    <string name="modify_alipay">支付宝修改</string>
    <string name="change_shipping_address">更改收货地址</string>
    <string name="clear_cache">清除缓存</string>
    <string name="unbind">未绑定</string>
    <string name="login_out">退出登录</string>
    <string name="taking_pictures">拍照</string>
    <string name="choose_from_album">从手机相册选择</string>
    <string name="there_is_no_sdcard">请确认已经插入SD卡</string>
    <string name="change_nickname">修改昵称</string>
    <string name="input_new_nickname">输入新昵称</string>
    <string name="please_input_new_nickname">请输入新昵称</string>
    <string name="confirm_modify">确定修改</string>
    <string name="modify_success">修改成功</string>
    <string name="tips">提示</string>
    <string name="is_login_out">确定退出登陆?</string>
    <string name="change_password">修改登录密码</string>
    <string name="mobile_number">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="complete">完成</string>
    <string name="real_name">姓名</string>
    <string name="input_real_name">请输入支付宝认证的真实姓名</string>
    <string name="alipay_account">支付宝号</string>
    <string name="input_alipay_account">请输入支付宝账号</string>
    <string name="mobile_code">手机号码</string>
    <string name="binding_now">立即绑定</string>
    <string name="clear_success">清除成功</string>
    <string name="my_income">我的收益</string>
    <string name="instruction">说明</string>
    <string name="income_preview">收益总览</string>
    <string name="look_detail">查看明细</string>
    <string name="forecast_income">预估收益</string>
    <string name="settlement_income">结算收益</string>
    <string name="this_month">本月</string>
    <string name="last_month">上月</string>
    <string name="today">今日</string>
    <string name="yesterday">昨日</string>
    <string name="payment_count">付款笔数</string>
    <string name="forecast_commission">预估佣金</string>
    <string name="income_source">收益来源统计</string>
    <string name="buy_income">自购收入</string>
    <string name="service_provider_income">服务商收入</string>
    <string name="income_detail">收益详情</string>
    <string name="recommend_friend">推荐好友</string>
    <string name="withdraw_record">提现记录</string>
    <string name="alipay">支付宝</string>
    <string name="input_withdraw_money">请输入要提现的金额</string>
    <string name="withdraw_all">全部提现</string>
    <string name="commit_audit">提交审核</string>
    <string name="withdraw_money_low_one">最低可提现金额为1元</string>
    <string name="lack_of_balance">余额不足</string>
    <string name="commit_success">提交成功</string>
    <string name="rule_instruction">活动规则</string>
    <string name="invite_friend_rule_content" formatted="false">1.海报内二维码已包含您的邀请信息; \n\n2.邀请1名好友通过您海报上二维码下载并注册,TA即可成为您的直属会员您自购/好友下单都可为您产生收益100%消费佣金; \n\n3.邀请超过50位新用户注册,您可升级成为钻石会员您将获得直属会员下级收益的50%消费佣金</string>
    <string name="buy_order">自购订单</string>
    <string name="reward_order">奖励订单</string>
    <string name="order_number">订单编号</string>
    <string name="order_amount">订单金额:￥%1$s</string>
    <string name="estimated_income">预估收入:</string>
    <string name="has_save">已存入:</string>
    <string name="has_payment">已付款</string>
    <string name="has_settled">已结算</string>
    <string name="has_failure">已失效</string>
    <string name="service_provider_rule">服务商规则</string>
    <string name="copy_success">复制成功</string>
    <string name="register_time">%1$s注册</string>
    <string name="transition_name_image">transition_name_image</string>
    <string name="go_group">去拼团</string>
    <string name="ju_hua_suan_price">聚划算价:￥%1$s</string>
    <string name="group_price">%1$s人拼团价:￥%2$s</string>
    <string name="input_your_name">请输入你的的姓名</string>
    <string name="click_apply">点击申请</string>
    <string name="invite_code_is_not_exist">邀请码不存在</string>
    <string name="tb_auth_failed">淘宝授权失败</string>
    <string name="original_mobile_number">原手机号</string>
    <string name="verify_success_bind_new_mobile">验证后绑定新手机</string>
    <string name="share_make_money">分享赚%1$s元</string>
    <string name="receive_coupon">领%1$s元券</string>
    <string name="buy_receive_money">下单领%1$s元</string>
    <string name="find_coupon">一键找券查佣金</string>
    <string name="high_coupon">高额券</string>
    <string name="super_bargain">超级划算</string>
    <string name="nine_nine">9块9包邮</string>
    <string name="sentiment_zone">超人气专区</string>
    <string name="input_feedback">请输入你要反馈的内容...</string>
    <string name="commit">提交</string>
    <string name="how_much">您还能输入%1$s个字符</string>
    <string name="current_version">当前版本</string>
    <string name="version_update">版本更新</string>
    <string name="go_update">去更新</string>
    <string name="about_peach">关于小桃</string>
    <string-array name="dynamic_tab_array">
        <item>每日爆款</item>
        <item>宣传素材</item>
        <item>小桃学堂</item>
    </string-array>
    <string-array name="income_tab_array">
        <item>淘宝</item>
        <item>天猫</item>
        <item>京东</item>
        <item>综合商城</item>
    </string-array>
    <string-array name="income_shop_type_array">
        <item>C</item>
        <item>B</item>
        <item>J</item>
        <item>Z</item>
    </string-array>
    <string-array name="income_detail_tab_array">
        <item>本月预估</item>
        <item>上月预估</item>
        <item>本月结算</item>
        <item>上月结算</item>
    </string-array>
    <string-array name="order_tab_array">
        <item>全部</item>
        <item>已付款</item>
        <item>已结算</item>
        <item>已失效</item>
    </string-array>
</resources>