<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <Space
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:scaleType="center"
            android:src="@mipmap/ic_black_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <View
            style="@style/line_style"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@color/black"
            tools:text="@string/transition_name_image"/>
    </LinearLayout>


    <View
        style="@style/line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/verify_code"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/input_verify_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_808080"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_stroke_05_ff1673_radius_15"
            android:gravity="center"
            android:text="@string/send_verify_code"
            android:textColor="@color/color_ff1673"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        style="@style/line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/digits"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/input_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_808080"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        style="@style/line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_password_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/digits"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/input_new_password_again"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_808080"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        style="@style/line_style"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_solid_ff1673_radius_22"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>