<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/status_view"
        android:layout_width="0dp"
        android:layout_height="0.01dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingEnd="7dp"
        android:paddingStart="7dp"
        android:paddingTop="10dp"
        android:scaleType="center"
        android:src="@mipmap/ic_black_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_view"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingEnd="17dp"
        android:paddingStart="17dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:includeFontPadding="false"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"/>

    <EditText
        android:id="@+id/edit_mobile"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:ellipsize="end"
        android:hint="@string/input_user_mobile"
        android:inputType="number"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/color_666666"
        android:textColorHint="@color/color_c1c1c1"
        android:textSize="14sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/edit_verify_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <EditText
        android:id="@+id/edit_verify_code"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:ellipsize="end"
        android:hint="@string/input_user_verify_code"
        android:inputType="number"
        android:maxLength="6"
        android:singleLine="true"
        android:textColor="@color/color_666666"
        android:textColorHint="@color/color_c1c1c1"
        android:textSize="14sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_mobile"
        app:layout_constraintStart_toStartOf="@+id/edit_mobile"
        app:layout_constraintTop_toBottomOf="@+id/edit_mobile"/>

    <android.support.constraint.Guideline
        android:id="@+id/gl_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>
    <TextView
        android:id="@+id/tv_send_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|end"
        android:text="@string/send_verify_code"
        android:textColor="@color/color_ff1673"
        app:layout_constraintTop_toTopOf="@+id/edit_verify_code"
        app:layout_constraintBottom_toBottomOf="@+id/edit_verify_code"
        app:layout_constraintStart_toStartOf="@+id/gl_one"
        app:layout_constraintEnd_toEndOf="@+id/edit_verify_code"/>
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:digits="@string/digits"
        android:ellipsize="end"
        android:hint="@string/input_user_new_password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/color_666666"
        android:textColorHint="@color/color_c1c1c1"
        android:textSize="14sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_again"
        app:layout_constraintEnd_toEndOf="@+id/edit_verify_code"
        app:layout_constraintStart_toStartOf="@+id/edit_verify_code"
        app:layout_constraintTop_toBottomOf="@+id/edit_verify_code"/>

    <EditText
        android:id="@+id/edit_password_again"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:digits="@string/digits"
        android:ellipsize="end"
        android:hint="@string/input_user_new_password_again"
        android:inputType="textPassword"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/color_666666"
        android:textColorHint="@color/color_c1c1c1"
        android:textSize="14sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/edit_invite_code"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"/>

    <EditText
        android:id="@+id/edit_invite_code"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:digits="@string/invite_digits"
        android:ellipsize="end"
        android:hint="@string/input_user_invite_code"
        android:inputType="text"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/color_666666"
        android:textColorHint="@color/color_c1c1c1"
        android:textSize="14sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_again"
        app:layout_constraintStart_toStartOf="@+id/edit_password_again"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_again"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_solid_ff1673_radius_22"
        android:gravity="center"
        android:text="@string/agree_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_invite_code"/>
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_prefix"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"/>

    <TextView
        android:id="@+id/tv_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_is_representative"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintEnd_toStartOf="@+id/tv_agreement"
        app:layout_constraintStart_toEndOf="@+id/check_box"
        app:layout_constraintTop_toTopOf="@+id/check_box"/>

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        android:textColor="@color/color_ff1673"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintEnd_toEndOf="@+id/tv_register"
        app:layout_constraintStart_toEndOf="@+id/tv_prefix"
        app:layout_constraintTop_toTopOf="@+id/check_box"/>
</android.support.constraint.ConstraintLayout>